--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Jordy's Website</title>
+    <title>Things by JLR</title>
 
     <link rel="stylesheet" href="main.css">
 </head>
